# vardiag

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  test_vardiag.py  vardiag-0.1.0-py3-none-any.whl
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
examples/: quickstart.py  scan_multiclass_shap.py
tutorial/: 01_full_tutorial.py
vardiag/: __init__.py  cli.py  core.py  data.py  metrics.py  validation.py
vardiag/tests/: test_vardiag.py
