[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vardiag"
version = "0.1.0"
description = "Variance Alignment Diagnostic (VAD) for assessing whether variance-based feature filtering is likely safe or harmful"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

keywords = [
    "feature selection",
    "multi-omics",
    "bioinformatics",
    "variance filtering",
    "decoupling index",
    "genomics",
    "machine learning",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
full = [
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "pandas>=1.5",
]
plot = [
    "matplotlib>=3.6",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "build>=1.2.0",
    "twine>=5.0.0",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.scripts]
vardiag = "vardiag.cli:main"

[project.urls]
Homepage      = "https://github.com/shoaibms/vardiag"
Repository    = "https://github.com/shoaibms/vardiag"
Issues        = "https://github.com/shoaibms/vardiag/issues"
Documentation = "https://github.com/shoaibms/vardiag#readme"
Changelog     = "https://github.com/shoaibms/vardiag/blob/main/CHANGELOG.md"
Manuscript    = "https://github.com/shoaibms/var-pre"

[tool.setuptools.packages.find]
where   = ["."]
include = ["vardiag*"]
exclude = ["vardiag.tests*"]

[tool.setuptools.package-data]
vardiag = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["vardiag/tests"]
addopts   = "-v --tb=short --cov=vardiag --cov-fail-under=90"

[tool.coverage.run]
source = ["vardiag"]
omit   = ["vardiag/tests/*", "vardiag/cli.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
